--- a/MiProyectoCastro/src/app/app.component.html
+++ b/MiProyectoCastro/src/app/app.component.html
@@ -1,2 +1,6 @@
 <app-header></app-header>
 <app-about></app-about>
+<app-experience></app-experience>
+<app-education></app-education>
+<app-hard-and-soft-skills></app-hard-and-soft-skills>
+<app-project></app-project>
